--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="profile">
           <img class="profile-picture" src="https://iili.io/HlJdssI.jpg" width="400" height="350" alt="">
           <h2>Hello.</h2>
-          <p class="intro">I am a web developer with limited experience, but I am highly enthusiastic about the field.</p>
+          <p class="intro">I am a web developer with vast experience, but I am highly enthusiastic about the field.</p>
         </div>
         <hr>
         <div class="skills">
